# ieql

./: CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  SPECIFICATION.md  TODO.md  example.ieql
query_examples/: advanced_compositions.ieql  name_example.ieql
src/: lib.rs
src/cli/: bin.rs
src/common/: compilation.rs  mod.rs  pattern.rs  retrieve.rs  validation.rs
src/input/: document.rs  mod.rs
src/output/: engine.rs  mod.rs  output.rs
src/query/: mod.rs  query.rs  response.rs  scope.rs  threshold.rs  trigger.rs
src/scan/: mod.rs  scanner.rs
