[package]
name = "ieql"
version = "0.2.6"
authors = ["R. Miles McCain <ieql@sendmiles.email>"]
readme = "README.md"
license = "GPL-3.0"
keywords = ["ieql", "query", "internet"]
categories = ["command-line-utilities", "filesystem"]
repository = "https://github.com/milesmcc/ieql"
description = "An open standard and implementation for monitoring Internet content"

[dependencies]
regex = "1.1.0"
serde = "1.0"
serde_derive = "1.0"
ron = "0.4"
url = "1.7.2"
clap = "2.32"
simplelog = "0.5"
log = "0.4"
scraper = "0.9.0"
walkdir = "2"
rand = "0.6"

[[bin]]
name = "ieql"
path = "src/cli/bin.rs"
doc = false